Fix pie labels so they don't get cut off.

--- a/site/src/scss/custom.scss
+++ b/site/src/scss/custom.scss
@@ -198,6 +198,11 @@ div#wrapper {
     }
 }
 
+.race-pie-container {
+    margin: 10px 0px 0px 4px
+
+}
+
 #ranking-table-view {
     li.header-row {
         height: 66px;
